뉴스 제목 추출하기 설명 추가

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f0d27781",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
       "Author: Kenneth Reitz\n",
       "Author-email: me@kennethreitz.org\n",
       "License: Apache-2.0\n",
-      "Location: C:\\Users\\vega2\\anaconda3\\Lib\\site-packages\n",
+      "Location: C:\\Users\\r2com\\anaconda3\\Lib\\site-packages\n",
       "Requires: certifi, charset-normalizer, idna, urllib3\n",
       "Required-by: anaconda-catalogs, anaconda-client, anaconda-cloud-auth, anaconda-project, conda, conda-build, conda-repo-cli, conda_package_streaming, cookiecutter, datashader, intake, jupyterlab_server, panel, requests-file, requests-toolbelt, Sphinx, streamlit, tldextract\n"
      ]
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f7798ea8",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
       "Author: \n",
       "Author-email: Leonard Richardson <leonardr@segfault.org>\n",
       "License: MIT License\n",
-      "Location: C:\\Users\\vega2\\anaconda3\\Lib\\site-packages\n",
+      "Location: C:\\Users\\r2com\\anaconda3\\Lib\\site-packages\n",
       "Requires: soupsieve\n",
       "Required-by: conda-build, nbconvert\n"
      ]
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "bf80a429",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9788d6ac",
    "metadata": {},
    "outputs": [
@@ -105,17 +105,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "94c12fd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://news.naver.com/section/105\n",
+      "<class 'requests.models.Response'>\n",
+      "200\n",
+      "True\n",
+      "<class 'bs4.BeautifulSoup'>\n",
+      "news 제목 = 엔씨, 적자 간신히 면했다…2Q 영업익 88억(상보)\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/277/0005455213\n",
+      "news 제목 = SKT, 'AI 추천 알고리즘' 정보검색학회서 우수 논문상\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/648/0000027904\n",
+      "news 제목 = 전기차 배터리 열폭주 막을 방법 찾았다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/366/0001009912\n",
+      "news 제목 = SK C&C, 베트남 기업과 손잡고 '디지털 ESG 사업' 글로벌 확장\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/030/0003229062\n",
+      "news 제목 = 더존비즈온, 2분기 영업이익 204억원…전년比 19%↑\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/003/0012709875\n",
+      "news 제목 = \"올해 스마트폰 출하 3.8%↑…1위 삼성, 애플과 격차 벌릴 것\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/001/0014854918\n",
+      "news 제목 = 이공계 대학원생, 내년부터 ‘한국형 스타이펜드’ 받는다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/009/0005345535\n",
+      "news 제목 = 한국금거래소 “티메프 미정산 이슈, 유동성 영향 없다…매출 영향 미미”\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/138/0002179207\n",
+      "news 제목 = 삼성전자, '루비콘 프로젝트' 띄운다…MS·구글·팔란티어 3파전\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/030/0003229219\n",
+      "news 제목 = 최재원 SK 수석부회장 장남, E&S 북미법인 입사\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340936\n",
+      "news 제목 = 이공계 대학원생에 최대 110만원 지급\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/014/0005223425\n",
+      "news 제목 = \"적자는 면했다\"...엔씨, 2분기 영업이익 88억원\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/008/0005073094\n",
+      "news 제목 = 5년만의 40도 돌파…'사상 최악' 2018년 기록 넘어설까?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/584/0000028180\n",
+      "news 제목 = 엔씨, 적자 간신히 면했다…2Q 영업익 88억(상보)\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/277/0005455213\n",
+      "news 제목 = 코스피·코스닥 줄이어 서킷브레이커 발동\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340932\n",
+      "news 제목 = 엔씨소프트, 적자 면했다… 2분기 영업이익 88억원\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/138/0002179213\n",
+      "news 제목 = 韓, 반도체 대중 수출 늘자… 中 “美 수출 제재 한계 드러나”\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/366/0001009937\n",
+      "news 제목 = ‘아재 입맛’인 줄 알았는데…믹스커피 MZ 업고 뜨나\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340930\n",
+      "news 제목 = 네이버 '쇼핑 검색광고' 타고 온 '파워적립' 8년 만에 폐지\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/018/0005805500\n",
+      "news 제목 = 한국 양궁 금메달 5개 '싹쓸이'...비결은?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340929\n",
+      "news 제목 = [단독] 찜통더위 부른 북태평양 고기압…한중일 손잡고 예측 정확성 높인다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/366/0001009933\n",
+      "news 제목 = 곤두박질치는 비트코인…'트럼프 약발' 보단 'R의 공포'\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/018/0005805497\n",
+      "news 제목 = 서브컬처 도전한다...엔씨, 빅게임스튜디오 지분 투자\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/029/0002892829\n",
+      "news 제목 = 이통3사 2분기 합산 영업익 예상 1.3조…전환지원금 타격 적었다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/003/0012710549\n",
+      "news 제목 = 배터리 화재 키우는 '열폭주' 억제 방법 찾았다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/584/0000028179\n",
+      "news 제목 = 티빙, 토종 OTT 1위 굳히기.. 쿠플, EPL로 만회 나선다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/014/0005223409\n",
+      "news 제목 = M7 주가폭락에 실망한 투자자…\"인내심 한계 달했다\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340926\n",
+      "news 제목 = 유라클, 수요예측 경쟁률 1065.8대 1…공모가 2만1000원 확정\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/138/0002179208\n",
+      "news 제목 = \"뭘로 결제했더라\"…티메프 환불, 페이·카드 희비 엇갈린다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/018/0005805482\n",
+      "news 제목 = 엔씨, 빅게임스튜디오 370억 규모 지분·판권 투자\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/003/0012710504\n",
+      "news 제목 = 한국금거래소 “티메프 미정산 이슈, 유동성 영향 없다…매출 영향 미미”\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/138/0002179207\n",
+      "news 제목 = 아이폰, 이제야 한국 대우하나…신작 '1차 출시국' 포함된다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/015/0005018184\n",
+      "news 제목 = 혼돈의 방송통신위원회와 ‘애국자가 없는 세상’\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340921\n",
+      "news 제목 = 청라 화재서 촉발된 '中 배터리 포비아'…韓 3사 대체 가능성은 [소부장박대리]\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/138/0002179205\n",
+      "news 제목 = 말라리아·일본뇌염 모기 2배 넘게 급증…가장 확실한 예방법은\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/421/0007710891\n",
+      "news 제목 = “편의점 알바보다 열악한 처우” 이공계 석박사…연구생활장려금 지급, 숨통 트일까\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/016/0002345560\n",
+      "news 제목 = 전기차 배터리 열폭주 막을 방법 찾았다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/366/0001009912\n",
+      "news 제목 = \"美 상무부, 자율주행차 중국SW 사용 금지 규정 이달 발표 예정\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/029/0002892817\n",
+      "news 제목 = 이공계 대학원생에 매달 80~110만원 지급…연구비 관리제도 개선\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/001/0014855246\n",
+      "news 제목 = 全 종목 '금메달' 석권 양궁…정의선 회장 40년 함께했다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340919\n",
+      "news 제목 = \"언제까지 이렇게 덥나\"…기상청 대신 인기 폭발한 날씨앱\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/008/0005073035\n",
+      "news 제목 = 美, 자율주행차에 중국산 SW·통신모듈 탑재 금지 추진\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/011/0004376131\n",
+      "news 제목 = 韓 해킹한 자료로 공장·지방개발 하려는 北... 北해커들 이곳 노린다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/008/0005073031\n",
+      "news 제목 = 코오롱바이오텍, 골관절염 치료제 ‘TG-C’ 대량 생산 공정 개발\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/018/0005805447\n"
+     ]
+    }
+   ],
    "source": [
     "# IT/과학 뉴스\n",
+    "req_param = {\n",
+    "    'sid': 105\n",
+    "}\n",
+    "# 어떤 URL을 변수를 할지 지정\n",
+    "url = 'https://news.naver.com/section/{sid}'.format(**req_param)\n",
+    "print(url)\n",
     "\n",
     "# 요청 헤더 설정 : 브라우저 정보\n",
     "req_header = {\n",
     "    'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36'\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "\n",
+    "# requests 모듈을 사용해서 http 통신\n",
+    "res = requests.get(url, headers=req_header)\n",
+    "print(type(res))\n",
+    "# 200이 나와야 정상적으로 동작\n",
+    "print(res.status_code)\n",
+    "# boolean으로 잘 동작하는지 확인\n",
+    "print(res.ok)\n",
+    "\n",
+    "if res.ok:\n",
+    "    # 이렇게하면 모든 source 다 보는 것 \n",
+    "    # F12에서 소스보기 텍스트 가져오기\n",
+    "    html = res.text\n",
+    "    # parsing을 통해 필요한 정보만 보자!\n",
+    "    # parsing을 하기 위해서 BeautifulSoup 객체 생성\n",
+    "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    print(type(soup))\n",
+    "\n",
+    "    # class가 sa_text인 <div> 내부에서 href 속성을 확인해서 필요한 것 추출\n",
+    "    # 예시 테그\n",
+    "    '''\n",
+    "        <div class='sa_text'>\n",
+    "            <a href='https://n.news.naver.com/mnews/article/092/0002340904'>\n",
+    "    '''\n",
+    "    atag_list = soup.select(\"div.sa_text a.sa_text_title\")\n",
+    "    for atag in atag_list:\n",
+    "        # text속성: tag사이의 content, strip()공백제거\n",
+    "        # 공백제거\n",
+    "        title = atag.text.strip()\n",
+    "        # atag를 가지고 오는데 그 중에서 href의 속성의 값을 가지고 오라는 의미\n",
+    "        # href 속서의 값을 추출하기\n",
+    "        url = atag['href']\n",
+    "        print(f'news 제목 = {title}')\n",
+    "        print(f'news 링크 = {url}')"
    ]
   },
   {
