뉴스 제목 추출하기 함수 수정

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "9f2e4ef8",
    "metadata": {},
    "outputs": [],
@@ -300,20 +300,36 @@
     "    req_header = {\n",
     "        'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/104.0.0.0 Safari/537.36'\n",
     "    }\n",
-    "    "
+    "\n",
+    "    ## 여기서부터 추가한 코드\n",
+    "    res = requests.get(url, headers=req_header)\n",
+    "\n",
+    "    if res.ok:\n",
+    "        html = res.text\n",
+    "        soup = BeautifulSoup(html, \"html.parser\")\n",
+    "        atag_list = soup.select(\"div.sa_text a.sa_text_title\")\n",
+    "        for atag in atag_list:\n",
+    "            title = atag.text.strip()\n",
+    "            url = atag['href']\n",
+    "            print(f'news 제목 = {title}')\n",
+    "            print(f'news 링크 = {url}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "858952c6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "======> https://news.naver.com/section/103 생활/문화 뉴스 <======\n"
+     "ename": "NameError",
+     "evalue": "name 'section_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m print_news(\u001b[38;5;241m103\u001b[39m,section_dict[\u001b[38;5;241m103\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'section_dict' is not defined"
      ]
     }
    ],
