웹툰 이미지 다운로드 코드 수정

--- a/01뉴스제목_웹툰_OpenAPI.ipynb
+++ b/01뉴스제목_웹툰_OpenAPI.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "4461b9cc",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "9f2e4ef8",
    "metadata": {},
    "outputs": [],
@@ -312,24 +312,104 @@
     "            title = atag.text.strip()\n",
     "            url = atag['href']\n",
     "            print(f'news 제목 = {title}')\n",
-    "            print(f'news 링크 = {url}')"
+    "            print(f'news 링크 = {url}')\n",
+    "    else:\n",
+    "        print(f'Error 발생 {res.status_code}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "858952c6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'section_dict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m print_news(\u001b[38;5;241m103\u001b[39m,section_dict[\u001b[38;5;241m103\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'section_dict' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======> https://news.naver.com/section/103 생활/문화 뉴스 <======\n",
+      "news 제목 = 7월 수입차 등록, 작년보다 4%↑…하이브리드차, 절반 육박\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/055/0001178728\n",
+      "news 제목 = [단독] 저스피스 재단 출범...\"지드래곤 신규 음원 수익 1% 기부\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/052/0002070139\n",
+      "news 제목 = 이용훈 \"오텔로는 모든 테너의 꿈…어렵지만 매력적\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/003/0012710235\n",
+      "news 제목 = 속도내는 현대차 인증중고차 사업…용인·양산 이어 ‘군산 센터’ 개소\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/032/0003312936\n",
+      "news 제목 = BMW, 뉴 M4 쿠페·컨버터블 출시…530마력 강력해진 엔진\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/016/0002345327\n",
+      "news 제목 = 다리 휘었나요? 그냥 두다간 ‘이 병’으로 이어질 수도\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078429\n",
+      "news 제목 = 멸치 '조금', 생선 '한 토막'…초4 아들에 '저속노화' 식단 논란\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/031/0000859381\n",
+      "news 제목 = 8월 눈병·귓병 가장 많아…\"물놀이 시 주의 필요\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/584/0000028181\n",
+      "news 제목 = 이른 추석에, 호텔 셰프의 차례상차림 벌써 나왔다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/016/0002345603\n",
+      "news 제목 = 소리 없이 찾아오는 ‘협심증’… 위험 알려주는 인공지능 개발돼\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078428\n",
+      "news 제목 = [내일 날씨] \"낮 최고 35도\"… 전국 '폭염' 주의하세요\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/417/0001018906\n",
+      "news 제목 = 황보라, \"얼굴에 뭘 붙인 거야?\"...피부 진정된다지만 오래 놔뒀다간\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/296/0000080556\n",
+      "news 제목 = \"30년 동안 잠을 안잤다고?\"...밤낮 깨어있다는 40대女, 어떻게 가능?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/296/0000080555\n",
+      "news 제목 = 아에로멕시코, '인천~멕시코시티' 직항 2년 만에 재개\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/421/0007710987\n",
+      "news 제목 = 7월 수입차 BMW 1위 탈환…벤츠·테슬라와 격차 벌려\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/092/0002340922\n",
+      "news 제목 = [르포]\"쪄 죽겠다\"…대청호 수해 쓰레기 수거 현장 더위와 전쟁\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/001/0014855300\n",
+      "news 제목 = 최소 열흘은 펄펄 끓을 한반도…역대 최고기온 '41도' 갈아 치울까\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/469/0000816123\n",
+      "news 제목 = [날씨] 이틀 연속 40℃ 육박 폭염...'한증막 더위' 10일 이상 더 간다\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/052/0002070328\n",
+      "news 제목 = [날씨] 한낮 체감온도 35도 안팎…내륙 중심 소나기\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/422/0000674747\n",
+      "news 제목 = [르포] \"냉토시 안에도 땀이 줄줄\"…부산 피서지도 '헉헉'\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/001/0014855252\n",
+      "news 제목 = \"피 한 방울로 신장이식 환자 이식 거부 반응 확인 가능\"\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078424\n",
+      "news 제목 = 유전자 돌연변이 없는 난소암, 면역항암제 치료 가능성 제시\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078422\n",
+      "news 제목 = 올해 열대야 12일 달해…'사상 최악 폭염' 2018년보다 많아\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/001/0014855230\n",
+      "news 제목 = 5초 만에 폐암 확인… ‘이 손가락 테스트’ 아시나요?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078419\n",
+      "news 제목 = [날씨] 서울 낮 체감 35℃...찜통 더위? 시원한 계곡은 달라요!\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/052/0002070314\n",
+      "news 제목 = \"샤넬은 살 만큼 샀다\"…요즘 잘나가는 '금수저룩' [안혜원의 명품의세계]\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/015/0005018165\n",
+      "news 제목 = 혈당 조절 위해 ‘이 식습관’ 바꿨더니... 체중에 큰 변화가?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/296/0000080550\n",
+      "news 제목 = '이 암' 극복하고, 아버지와 1600km 자전거 완주 목표… 英 소년, 사연 봤더니?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078418\n",
+      "news 제목 = [날씨] 전국 대부분 지역 폭염경보…요란한 소나기 유의\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/422/0000674739\n",
+      "news 제목 = 찬 음식 먹었더니 설사 줄줄… ‘이때’ 먹으면 도움 되는 음식 3\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078416\n",
+      "news 제목 = 태극기 휘날린 대한민국 양궁… 현대차그룹 첨단기술 ‘적중’\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/020/0003580327\n",
+      "news 제목 = [날씨] 이틀째 40℃ 육박 극한 폭염...도로 표면 온도는?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/052/0002070300\n",
+      "news 제목 = 폭염에 지난주 평일 4백여명 응급실행…4명 사망\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/374/0000396098\n",
+      "news 제목 = “국내에서만 유행하는 일본뇌염바이러스(5형), 기존 바이러스보다 더 치명적”\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/022/0003957238\n",
+      "news 제목 = [날씨] 밤낮 가리지 않는 무더위…전국 폭염특보 발효 중\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/422/0000674731\n",
+      "news 제목 = \"주말에만 5명 숨졌다\"…'살인 폭염'에 올해 온열질환 사망자 13명\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/011/0004376111\n",
+      "news 제목 = 계곡에 사는 가재를 꼬시는 엉뚱한 노래\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/047/0002441996\n",
+      "news 제목 = 나이 들수록 男이 신경 써야 할 것들...컨디션 최상으로 유지하려면?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/296/0000080548\n",
+      "news 제목 = 한국에만 있는 '5형 일본뇌염', 기존 백신으론 방어 못해\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/584/0000028176\n",
+      "news 제목 = 배우 황승언, 수영복 입고 ‘애플힙’ 뒤태 뽐내… 평소 먹는 식단 뭘까?\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/346/0000078414\n",
+      "news 제목 = ‘안정형 협심증’도 관상동맥질환 예측 성공\n",
+      "news 링크 = https://n.news.naver.com/mnews/article/016/0002345496\n"
      ]
     }
    ],
@@ -348,10 +428,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "c72d6cb1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg (299,319 bytes)\n",
+      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg (163,333 bytes)\n",
+      "writing to 20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg (182,530 bytes)\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import os\n",
@@ -359,12 +449,28 @@
     "req_header = {\n",
     "    'referer':'https://comic.naver.com/webtoon/detail?titleId=798173&no=5&amp;weekday=thu'\n",
     "}\n",
+    "\n",
+    "# jpg filename list\n",
     "img_urls = [\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_1.jpg',\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_2.jpg',\n",
     "    'https://image-comic.pstatic.net/webtoon/798173/5/20220804112251_d97bd1e1b38f0cd022e4e3639d2926b3_IMAG01_3.jpg'\n",
     "]\n",
-    "\n"
+    "\n",
+    "for img_url in img_urls:\n",
+    "    #print(img_url)\n",
+    "    res = requests.get(img_url, headers=req_header)\n",
+    "    #print(res.status_code)\n",
+    "    if res.ok:\n",
+    "        # binary 데이터 추출\n",
+    "        img_data = res.content\n",
+    "        # url에서 file name을 가져오기\n",
+    "        file_name = os.path.basename(img_url)\n",
+    "        with open(file_name,'wb') as file:\n",
+    "            print(f'writing to {file_name} ({len(img_data):,} bytes)')\n",
+    "            file.write(img_data)\n",
+    "    else:\n",
+    "        print(f'Error 발생 {res.status_code}') "
    ]
   },
   {
@@ -377,21 +483,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "b30f7bf5",
+   "execution_count": 38,
+   "id": "8a80fd2b-bc3a-4587-914d-5e3426130a5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n",
+      "18\n",
+      "1 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_1.jpg (128,897 bytes)\n",
+      "2 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_2.jpg (143,194 bytes)\n",
+      "3 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_3.jpg (101,900 bytes)\n",
+      "4 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_4.jpg (112,007 bytes)\n",
+      "5 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_5.jpg (190,876 bytes)\n",
+      "6 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_6.jpg (134,590 bytes)\n",
+      "7 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_7.jpg (132,910 bytes)\n",
+      "8 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_8.jpg (174,434 bytes)\n",
+      "9 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_9.jpg (88,576 bytes)\n",
+      "10 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_10.jpg (177,240 bytes)\n",
+      "11 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_11.jpg (95,130 bytes)\n",
+      "12 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_12.jpg (109,718 bytes)\n",
+      "13 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_13.jpg (144,476 bytes)\n",
+      "14 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_14.jpg (127,739 bytes)\n",
+      "15 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_15.jpg (143,133 bytes)\n",
+      "16 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_16.jpg (159,328 bytes)\n",
+      "17 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_17.jpg (139,300 bytes)\n",
+      "18 200\n",
+      "writing to img\\20240226100634_548bfa8f14799d53d45b5f12df1b289e_IMAG01_18.jpg (54,967 bytes)\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import os\n",
     "\n",
-    "url = 'https://comic.naver.com/webtoon/detail?titleId=817945&no=37&week=mon'\n",
+    "webtoon_url = 'https://comic.naver.com/webtoon/detail?titleId=817945&no=37&week=mon'\n",
     "req_header = {\n",
-    "    'referer': url\n",
+    "    'referer': webtoon_url\n",
     "}\n",
-    "res = requests.get(url)\n",
+    "# jpg image 파일명을 먼저 알아내기\n",
+    "res = requests.get(webtoon_url)\n",
     "if res.ok: #200\n",
-    "    pass\n",
+    "    # xx.jpg 파일명 목록 가져오기\n",
+    "    soup = BeautifulSoup(res.text, 'html.parser')\n",
+    "\n",
+    "    # css 선택자를 줘서 필요한 항목만 추출할 수 있도록 한다\n",
+    "    print(len(soup.select(\"img[src$='.jpg']\"))) #108\n",
+    "    print(len(soup.select(\"img[src*='IMAG01']\"))) #18\n",
+    "    img_tag_list = soup.select(\"img[src*='IMAG01']\")\n",
+    "\n",
+    "    #image 파일명을 저장할 리스트 선언\n",
+    "    img_url_list = []\n",
+    "    for img_tag in img_tag_list:\n",
+    "        #print(img_tag['src'])\n",
+    "        #image 태그의 src속성의 값을 추출해서 list에 추가하기\n",
+    "        img_url_list.append(img_tag['src'])\n",
+    "\n",
+    "    image_dir_name = 'img'\n",
+    "    #img 디렉토리가 없으면 img 디렉토리 생성하기\n",
+    "    if not os.path.isdir(image_dir_name):\n",
+    "        os.mkdir(image_dir_name)\n",
+    "\n",
+    "    for idx,img_url in enumerate(img_url_list,1):\n",
+    "        res = requests.get(img_url, headers=req_header)\n",
+    "        # print(idx, img_url)\n",
+    "        print(idx, res.status_code)\n",
+    "        if res.ok:\n",
+    "            # binary 데이터 추출\n",
+    "            img_data = res.content\n",
+    "            # url에서 file name을 가져오기\n",
+    "            file_name = os.path.basename(img_url)\n",
+    "            #img/xxxx.jpg\n",
+    "            dir_name = os.path.join(image_dir_name,file_name)\n",
+    "            with open(dir_name,'wb') as file:\n",
+    "                print(f'writing to {dir_name} ({len(img_data):,} bytes)')\n",
+    "                file.write(img_data)\n",
+    "        else:\n",
+    "            print(f'Error 발생 {res.status_code}')\n",
     "else:\n",
     "    print(res.status_code)"
    ]
